--- a/src/pages/websoket/websoket.css
+++ b/src/pages/websoket/websoket.css
@@ -21,6 +21,7 @@
   border-radius: 20px;
   outline: none;
   font-size: 20px;
+  color: var(--tg-theme-text-color);
 }
 
 .websoket__list {
@@ -32,11 +33,12 @@
   flex-direction: column;
   list-style: none;
   align-items: flex-start;
-  background-color: aliceblue;
+  background-color: var(--tg-theme-bg-color);
   border-radius: 20px;
   box-shadow: 1px 1px 8px 2px #0000007d;
 }
 
 .websoket__item {
   border-bottom: 1px solid #000;
+  color: var(--tg-theme-text-color);
 }
