--- a/src/pages/weather/weather.css
+++ b/src/pages/weather/weather.css
@@ -10,6 +10,7 @@
   margin: 0;
   padding: 0;
   font-size: 30px;
+  color: var(--tg-theme-text-color);
 }
 
 .weather__description {
@@ -19,6 +20,7 @@
   align-items: center;
   justify-content: center;
   font-size: 25px;
+  color: var(--tg-theme-text-color);
 }
 
 .weather__name-city {
@@ -26,12 +28,14 @@
   padding: 0;
   font-size: 25px;
   font-weight: 700;
+  color: var(--tg-theme-text-color);
 }
 
 .weather__temp {
   margin: 0;
   padding: 0;
   font-size: 20px;
+  color: var(--tg-theme-text-color);
 }
 
 .weather__icon {
